# id-agent-control-center

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
docs/: CONTROL_CENTER_WIKI.json  HEADROOM_BACKEND_CONTRACT.md  PRODUCT_SPEC.md  dashboard-command-surface-plan.md
idctl/: README.md  idctl.command  package-lock.json  package.json  tsconfig.json
idctl-desktop/: README.md  package-lock.json  package.json  tsconfig.json
idctl-desktop/resources/computeruse-mcp/: server.mjs
idctl-desktop/resources/idacc-context-retrieval/: SKILL.md  plugin.json
idctl-desktop/scripts/: build-tauri.mjs  build.mjs  context-budget-history.mjs  context-budget-smoke.mjs  headroom-plugin-path-smoke.mjs
idctl-desktop/src-tauri/: Cargo.toml  tauri.conf.json
idctl-desktop/src-tauri/capabilities/: default.json
idctl-desktop/src-tauri/icons/: icon.icns
idctl-desktop/src-tauri/src/: main.rs
idctl-desktop/src/main/: brainplans.ts  bridge.ts  chatfiles.ts  chatstore.ts  contextBudget.ts  contextReplay.ts  controlLog.ts  dreamstore.ts  goaldriver.ts  goalstore.ts  headroom.ts  headroomPlugin.ts  images.ts  main.ts  materialstore.ts  mcpTest.ts  ollama.ts  orgSync.ts  planstore.ts  projects.ts  questionstore.ts  subscriptions.ts  system.ts  updater.ts  work.ts
idctl-desktop/src/preload/: preload.ts
idctl-desktop/src/renderer/: App.tsx  agentStatus.ts  global.d.ts  index.html  main.tsx  store.ts  (+1 more)
idctl/src/: cli.tsx  config.ts  version.ts
output/: sync-live-coordination-hr.md
scripts/: check-wiki.mjs  release.sh  setup-hooks.sh
scripts/hooks/: commit-msg
(+97 files in other folders)
