[package]
name = "idagents-control"
version = "0.1.0"
description = "ID Agents Control Center"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-http = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
